src/styles/index.module.css
.headingStack {
  position: relative;
  margin: 0;
  padding: 25px 50px 100px 0;
}

.column {
  display: flex;
  flex-direction: column;
}

.titleHeading {
  font-size: 6em;
}

.headingSvg {
  position: absolute;
  width: 100%;
  height: 100%;
}

.lineHeadingSvg {
  stroke: var(--joy-palette-primary-500);
  stroke-width: 6px;
  fill: transparent;
}

.stationCircleHeadingSvg {
  stroke: var(--joy-palette-primary-500);
  stroke-width: 3px;
  fill: white;
}

.stationTextHeadingSvg {
  fill: var(--joy-palette-text-primary);
  font-family: var(--joy-fontFamily-body);
  font-size: 14px;
}

.trainSvg {
  position: absolute;
  right: 200px;
  top: 415px;
  height: 40px;
}

.lineLeftStack {
  margin: 0;
  position: relative;
  height: 100vh;
}

.lineLeftHalfAcrossStack {
  position: relative;
  background-image: linear-gradient(0deg,
    transparent 0%,
    transparent calc(50% - 5.1px),
    var(--joy-palette-primary-500) calc(50% - 5px),
    var(--joy-palette-primary-500) calc(50% + 5px),
    transparent calc(50% + 5.1px),
    transparent 100%
  );
}

.lineLeftStack::before {
  content: '';
  position: absolute;
  left: -50px;
  top: 0;
  display: block;
  width: 10px;
  background-color: var(--joy-palette-primary-500);
  height: 100%;
}

.lineLeftHalfAcrossStack::before {
  content: '';
  position: absolute;
  left: -50px;
  top: 0;
  display: block;
  width: 10px;
  background-color: var(--joy-palette-primary-500);
  height: calc(50% - 43px);
}

.lineLeftHalfAcrossStack::after {
  content: '';
  position: absolute;
  left: -27px;
  top: calc(50% - 58px);
  display: block;
  width: 9.5px;
  background-color: var(--joy-palette-primary-500);
  height: 70px;
  transform: rotate(-45deg);
}

.heading {
 position: relative; 
 color: var(--joy-palette-primary-500);
}

.headingActive {
  position: relative; 
  color: var(--joy-palette-text-tertiary);
 }

.heading::before {
  content: '';
  position: absolute;
  left: -70px;
  top: -5px;;
  display: block;
  height: 20px;
  width: 20px;
  background-color: var(--joy-palette-primary-50);
  border: 15px solid var(--joy-palette-primary-500);
  border-radius: 50%;
}

.headingActive::before {
  content: '';
  position: absolute;
  left: -70px;
  top: -5px;;
  display: block;
  height: 20px;
  width: 20px;
  background-color: var(--joy-palette-primary-50);
  border: 15px solid var(--joy-palette-text-tertiary);
  border-radius: 50%;
}

.teamTileTop,
.teamTileTop {
  position: relative;
}

.teamTileTop::before {
  content: '';
  display: block;
  position: absolute;
  bottom: -70px;
  left: calc(50% - 5px);
  height: 70px;
  width: 10px;
  background-color: var(--joy-palette-primary-500);
}

.teamTileBottom::before {
  content: '';
  display: block;
  position: absolute;
  top: -70px;
  left: calc(50% - 5px);
  height: 70px;
  width: 10px;
  background-color: var(--joy-palette-primary-500);
}

.teamSection {
  height: calc(100% - 100px);
}

.snappingContainer {
  scroll-snap-type: y mandatory;
  overflow-y: scroll;
  height: 90vh;
}

.snappingSection {
  scroll-snap-align: start;
  height: 90vh;
}

.scrollableContainer {
  height: 90vh; /* Set a fixed height for the container */
  overflow-y: scroll; /* Enable vertical scrolling */
}

.tooltip {
  border-radius: 25px;
  border: 2px solid #73AD21;
  padding: 20px;
  width: 200px;
  height: 150px;
} 

